# firefly-csv-converter

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
samples/: bb-cp.csv  bb-lcilca.txt  ourocard-clean.ofx  ourocard-header.ofx  rico-cc.xlsx
scripts/: convert_bb_cp.py  convert_bb_lc.py
src/firefly_csv_converter/: _ofx_common.py  _picpay_ofx_common.py  convert_bb_cp.py  convert_bb_lc.py  convert_c6_credit_csv_ofx.py  convert_c6_credit_pdf_ofx.py  convert_ifood_pdf_ofx.py  convert_ourocard_ofx.py  convert_pb_pdf_ofx.py  convert_picpay_pdf_ofx.py  convert_picpay_pdf_ofx_2024.py  convert_picpay_pdf_ofx_2025.py  convert_rico_cc.py  convert_rico_xlsx_csv.py  convert_rico_xlsx_ofx.py  convert_vr_pdf_ofx.py  converter_registry.py  statement_converter.py
src/statement_converter/: _ofx_common.py  _rico_cc_common.py  convert_bb_cc_pdf_ofx.py  convert_bb_lc.py  convert_c6_credit_csv_ofx.py  convert_c6_credit_pdf_ofx.py  convert_ifood_pdf_ofx.py  convert_ourocard_ofx.py  convert_pb_pdf_ofx.py  convert_picpay_pdf_ofx.py  convert_picpay_pdf_ofx_2024.py  convert_picpay_pdf_ofx_2025.py  convert_rico_antigo_pdf_ofx.py  convert_rico_xlsx_csv.py  convert_rico_xlsx_ofx.py  convert_vr_pdf_ofx.py  converter_registry.py  statement_converter.py
tests/: test_convert_bb_cc_pdf_ofx.py  test_convert_bb_cp.py  test_convert_bb_lcilca.py  test_convert_c6_credit_csv_ofx.py  test_convert_c6_credit_pdf_ofx.py  test_convert_ifood_pdf_ofx.py  test_convert_ourocard_ofx.py  test_convert_pb_pdf_ofx.py  test_convert_picpay_pdf_ofx_2024.py  test_convert_picpay_pdf_ofx_2025.py  test_convert_rico_antigo_pdf_ofx.py  test_convert_rico_cc.py  test_convert_rico_xlsx_csv.py  test_convert_rico_xlsx_ofx.py  test_convert_vr_pdf_ofx.py  test_ofx_common.py  test_statement_converter.py
