[project]
name = "firefly-csv-converter"
version = "0.1.2"
description = "Tools to convert and clean bank statements into Firefly III import format (CSV)."
authors = [{ name = "Renato Costa", email = "renato@ccosta.dev" }]
readme = "README.md"
license-files = ["COPYING"]
requires-python = ">=3.11"
dependencies = ["pandas (>=2.3.3,<3.0.0)", "openpyxl (>=3.1.5,<4.0.0)", "ofxparse (>=0.21,<0.22)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = ["pytest", "pytest-cov"]

[project.scripts]
convert-bb-cp = "firefly_csv_converter.convert_bb_cp:main"
convert-bb-lc = "firefly_csv_converter.convert_bb_lc:main"
convert-ourocard-ofx = "firefly_csv_converter.convert_ourocard_ofx:main"
convert-rico-cc = "firefly_csv_converter.convert_rico_cc:main"
