[project]
name = "firefly-csv-converter"
version = "0.1.2"
description = "Tools to convert and clean bank statements into Firefly III import format (CSV)."
authors = [{ name = "Renato Costa", email = "renato@ccosta.dev" }]
readme = "README.md"
license-files = ["COPYING"]
requires-python = ">=3.11"
dependencies = ["pandas (>=2.3.3,<3.0.0)", "openpyxl (>=3.1.5,<4.0.0)", "ofxparse (>=0.21,<0.22)", "pypdf (>=6.9.1,<7.0.0)", "cryptography (>=46.0.5,<47.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = ["pytest", "pytest-cov"]

[project.scripts]
statement-converter = "firefly_csv_converter.statement_converter:main"
convert-bb-cp = "firefly_csv_converter.convert_bb_cp:main"
convert-bb-lc = "firefly_csv_converter.convert_bb_lc:main"
convert-c6-credit-csv-ofx = "firefly_csv_converter.convert_c6_credit_csv_ofx:main"
convert-c6-credit-pdf-ofx = "firefly_csv_converter.convert_c6_credit_pdf_ofx:main"
convert-ifood-pdf-ofx = "firefly_csv_converter.convert_ifood_pdf_ofx:main"
convert-ourocard-ofx = "firefly_csv_converter.convert_ourocard_ofx:main"
convert-pb-pdf-ofx = "firefly_csv_converter.convert_pb_pdf_ofx:main"
convert-picpay-pdf-ofx-2024 = "firefly_csv_converter.convert_picpay_pdf_ofx_2024:main"
convert-picpay-pdf-ofx-2025 = "firefly_csv_converter.convert_picpay_pdf_ofx_2025:main"
convert-rico-xlsx-csv = "firefly_csv_converter.convert_rico_xlsx_csv:main"
convert-rico-xlsx-ofx = "firefly_csv_converter.convert_rico_xlsx_ofx:main"
convert-vr-pdf-ofx = "firefly_csv_converter.convert_vr_pdf_ofx:main"
